--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -39,6 +39,7 @@
   "block.extshape.prefix.snow": "Snow",
   "block.extshape.prefix.spruce": "Spruce",
   "block.extshape.prefix.stone_brick": "Stone brick",
+  "block.extshape.prefix.unknown": "Unknown",
   "block.extshape.prefix.warped": "Warped",
   "block.extshape.prefix.warped_wart": "Warped wart",
 
