--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -39,6 +39,7 @@
   "block.extshape.prefix.snow": "雪",
   "block.extshape.prefix.spruce": "云杉木",
   "block.extshape.prefix.stone_brick": "石砖",
+  "block.extshape.prefix.unknown": "未知",
   "block.extshape.prefix.warped": "诡异木",
   "block.extshape.prefix.warped_wart": "诡异疣",
 
