--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -52,5 +52,5 @@
   "itemGroup.extshape.stone_blocks": "擴展方塊形狀：石質方塊（按基礎方塊排序，含原版方塊）",
   "itemGroup.extshape.other_blocks": "擴展方塊形狀：其他（按基礎方塊排序，含原版方塊）",
 
-  "modmenu.descriptionTranslation.extshape": "更多形狀嘅更多方塊！"
+  "modmenu.descriptionTranslation.extshape": "本模組為好多方塊添加咗多啲形狀，包括原版唔存在嘅形狀，如縱半磚。大多數方塊都好似原版一样可以合成。藉助此模組，你可以製作出更加精美嘅建築。"
 }
