--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -52,5 +52,5 @@
   "itemGroup.extshape.stone_blocks": "Extended Block Shape: Stone Blocks (sorted by base blocks, including vanilla blocks)",
   "itemGroup.extshape.other_blocks": "Extended Block Shape: Other Blocks (sorted by base blocks, including vanilla blocks)",
 
-  "modmenu.descriptionTranslation.extshape": "More blocks in more shapes!"
+  "modmenu.descriptionTranslation.extshape": "Added more shapes for many blocks, including shapes that does not exist in vanilla Minecraft, like vertical slabs. Most of the blocks are craftable like in vanilla. With this mod you can make more fascinating buildings!"
 }
