--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -1,4 +1,7 @@
 {
+  "block.extshape.petrified_oak_planks": "石化橡木木板",
+  "block.extshape.smooth_stone_slab_double": "双层平滑石台阶",
+
   "block.extshape.?_button": "%s按钮",
   "block.extshape.?_fence": "%s栅栏",
   "block.extshape.?_fence_gate": "%s栅栏门",
@@ -10,7 +13,7 @@
   "block.extshape.?_vertical_slab": "%s纵台阶",
   "block.extshape.?_vertical_stairs": "%s纵楼梯",
   "block.extshape.?_wall": "%s墙",
-  "block.extshape.petrified_oak_planks": "石化橡木木板",
+
   "block.extshape.prefix.acacia": "金合欢木",
   "block.extshape.prefix.amethyst": "紫水晶",
   "block.extshape.prefix.birch": "白桦木",
@@ -63,12 +66,14 @@
   "block.extshape.prefix.waxed_oxidized_cut_copper": "氧化的涂蜡切制铜",
   "block.extshape.prefix.waxed_weathered_copper": "锈蚀的涂蜡铜",
   "block.extshape.prefix.waxed_weathered_cut_copper": "锈蚀的涂蜡切制铜",
+  "block.extshape.prefix.weathered_copper": "锈蚀的铜",
   "block.extshape.prefix.weathered_cut_copper": "锈蚀的切制铜",
-  "block.extshape.smooth_stone_slab_double": "双层平滑石台阶",
+
   "itemGroup.extshape.colorful_blocks": "扩展方块形状：彩色方块（按基础方块排序，含原版方块）",
   "itemGroup.extshape.other_blocks": "扩展方块形状：其他（按基础方块排序，含原版方块）",
   "itemGroup.extshape.stone_blocks": "扩展方块形状：石质方块（按基础方块排序，含原版方块）",
   "itemGroup.extshape.wooden_blocks": "扩展方块形状：木制方块（按基础方块排序，含原版方块）",
+
   "modmenu.descriptionTranslation.extshape": "本模组为许多方块添加了更多形状，包括原版不存在的形状，如垂直台阶。大多数方块都像原版一样可以合成。借助此模组，你可以制作出更加精美的建筑。",
   "option.reasonable-sorting.error.invalid_shape_name": "无效的形状名称：%s。"
 }
