Add transfer rules related to Reasonable Sorting

--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -23,7 +23,7 @@
   "block.extshape.prefix.chiseled_stone_brick": "鏨磚",
   "block.extshape.prefix.clay": "埴",
   "block.extshape.prefix.crimson": "緋蕈木",
-  "block.extshape.prefix.cut_copper": "切製銅",
+  "block.extshape.prefix.cut_copper": "割銅",
   "block.extshape.prefix.dark_oak": "黯柞",
   "block.extshape.prefix.deepslate_brick": "板巖磚",
   "block.extshape.prefix.deepslate_tile": "板巖瓦",
@@ -44,8 +44,8 @@
   "block.extshape.prefix.nether_wart": "焱界疣",
   "block.extshape.prefix.netherite": "玄鈺",
   "block.extshape.prefix.oak": "柞",
-  "block.extshape.prefix.oxidized_copper": "風磨銅",
-  "block.extshape.prefix.oxidized_cut_copper": "風磨割銅",
+  "block.extshape.prefix.oxidized_copper": "風蝕銅",
+  "block.extshape.prefix.oxidized_cut_copper": "風蝕割銅",
   "block.extshape.prefix.prismarine_brick": "海磷",
   "block.extshape.prefix.purpur": "紫珀",
   "block.extshape.prefix.quartz": "石英",
@@ -59,11 +59,11 @@
   "block.extshape.prefix.warped": "譎蕈木",
   "block.extshape.prefix.warped_wart": "譎疣",
   "block.extshape.prefix.waxed_copper": "蠟引銅",
-  "block.extshape.prefix.waxed_cut_copper": "蠟引銅",
+  "block.extshape.prefix.waxed_cut_copper": "蠟引割銅",
   "block.extshape.prefix.waxed_exposed_copper": "蠟引渡濕銅",
   "block.extshape.prefix.waxed_exposed_cut_copper": "蠟引渡濕割銅",
-  "block.extshape.prefix.waxed_oxidized_copper": "蠟引風磨銅",
-  "block.extshape.prefix.waxed_oxidized_cut_copper": "蠟引風磨割銅",
+  "block.extshape.prefix.waxed_oxidized_copper": "蠟引風蝕銅",
+  "block.extshape.prefix.waxed_oxidized_cut_copper": "蠟引風蝕割銅",
   "block.extshape.prefix.waxed_weathered_copper": "蠟引鏽刻銅",
   "block.extshape.prefix.waxed_weathered_cut_copper": "蠟引鏽刻割銅",
   "block.extshape.prefix.weathered_copper": "鏽刻銅",
@@ -75,5 +75,4 @@
   "itemGroup.extshape.other_blocks": "塊形之擴：餘（序以原，含藝赍之塊）",
 
   "modmenu.descriptionTranslation.extshape": "增益形于塊，含形之藝赍未含者，如立版。咸可以類藝赍之製。作精良建築也。",
-  "option.reasonable-sorting.error.invalid_shape_name": "非形之名也：%s。"
 }
