--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -78,5 +78,30 @@
   "itemGroup.extshape.stone_blocks": "Extended Block Shape: Stone Blocks (sorted by base blocks, including vanilla blocks)",
   "itemGroup.extshape.other_blocks": "Extended Block Shape: Other Blocks (sorted by base blocks, including vanilla blocks)",
 
-  "modmenu.descriptionTranslation.extshape": "Added more shapes for many blocks, including shapes that does not exist in vanilla Minecraft, like vertical slabs. Most of the blocks are craftable like in vanilla. With this mod you can make more fascinating buildings!"
+  "modmenu.descriptionTranslation.extshape": "Added more shapes for many blocks, including shapes that does not exist in vanilla Minecraft, like vertical slabs. Most of the blocks are craftable like in vanilla. With this mod you can make more fascinating buildings!",
+
+  "options.extshape.title": "Configuration of Extended Block Shapes Mod",
+  "options.extshape.addToVanillaGroups": "Add to vanilla groups",
+  "options.extshape.addToVanillaGroups.tooltip": "Add blocks added by this mod to Minecraft's vanilla Creative Mode item groups. For example, all stairs, slabs, etc., are added to \"%s\" groups; fences and walls are added to \"%s\" group, and fence gates, pressure plates and buttons are added to \"%s\" group. Items are sort in the order they are defined, so the item list could be messy, but if you installed Reasonable Sorting Mod, then this option is preferred.",
+  "options.extshape.showSpecificGroups": "Show specific groups",
+  "options.extshape.showSpecificGroups.tooltip": "Add four specific item groups to display blocks that have different shapes (including vanilla and mod) in a fancy order. They are sorted by their base blocks, and blocks based on a same block are displayed together.",
+  "options.extshape.default": "Default: %s",
+  "options.extshape.confirm": "Are you sure?",
+  "options.extshape.confirm.noGroups": "Your both '%s' and '%s' are set '%s', which means in Creative Mode you may not directly obtain items in this mod in your Creative inventory. Are you sure to continue?",
+  "options.extshape.confirm.redo": "I reconsider",
+  "options.extshape.registerBlockFamilies": "Register BlockFamilies",
+
+  "options.extshape.rrp.title": "Runtime Resource Pack settings",
+  "options.extshape.rrp.regenClientResources": "Regenerate client resources",
+  "options.extshape.rrp.regenClientResources.process": "Regenerating client resources...",
+  "options.extshape.rrp.regenServerData": "Regenerate server data",
+  "options.extshape.rrp.regenServerData.process": "Regenerating server data...",
+  "options.extshape.rrp.exportClientResources": "Export client resource pack",
+  "options.extshape.rrp.exportClientResources.process": "Exporting client resource pack...",
+  "options.extshape.rrp.exportServerData": "Export server data",
+  "options.extshape.rrp.exportServerData.process": "Exporting server data...",
+  "options.extshape.rrp.exportFilePath": "Export file path",
+  "options.extshape.rrp.textFieldHeader": "Resources will be exported at:",
+  "options.extshape.rrp.fullPath": "Full path: %s",
+  "options.extshape.rrp.invalidPath": "Invalid path: %s"
 }
