--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -78,5 +78,30 @@
   "itemGroup.extshape.stone_blocks": "擴展方塊形狀：石質方塊（按基礎方塊排序，含原版方塊）",
   "itemGroup.extshape.other_blocks": "擴展方塊形狀：其他（按基礎方塊排序，含原版方塊）",
 
-  "modmenu.descriptionTranslation.extshape": "本模組為許多方塊添加了更多形狀，包括原版不存在的形狀，如縱半磚。大多數方塊都像原版一樣可以合成。藉助此模組，你可以製作出更加精美的建築。"
+  "modmenu.descriptionTranslation.extshape": "本模組為許多方塊添加了更多形狀，包括原版不存在的形狀，如縱半磚。大多數方塊都像原版一樣可以合成。藉助此模組，你可以製作出更加精美的建築。",
+
+  "options.extshape.title": "擴展方塊形狀模組配置",
+  "options.extshape.addToVanillaGroups": "添加至原版物品組",
+  "options.extshape.addToVanillaGroups.tooltip": "將本模組添加的方塊添加至Minecraft的原版創造模式物品組中。例如，所有的階梯和半磚都加入“%s”物品組，柵欄和牆加入“%s”物品組，按鈕和壓力板則加入“%s”物品組。物品是按照被定義時的順序加入的，所以可能會有點亂，但是如果您安裝了合理排序模組，則推薦開啟此項。",
+  "options.extshape.showSpecificGroups": "顯示專門物品組",
+  "options.extshape.showSpecificGroups.tooltip": "添加一些專門的物品組以顯示所有擁有不同形狀的方塊（含原版和模組中的），這些方塊按照其基礎方塊的順序排列，基礎方塊相同的方塊顯示在一起。",
+  "options.extshape.default": "默認：%s",
+  "options.extshape.confirm": "確定？",
+  "options.extshape.confirm.noGroups": "您的“%s”和“%s”都設置為“%s”，這意味著您在創造模式下，無法從創造模式物品欄中獲取模組中的物品。確定要繼續嗎？",
+  "options.extshape.confirm.redo": "我再考慮下",
+  "options.extshape.registerBlockFamilies": "註冊BlockFamilies",
+
+  "options.extshape.rrp.title": "運行時資源包設置",
+  "options.extshape.rrp.regenClientResources": "重新生成用戶端資源包",
+  "options.extshape.rrp.regenClientResources.process": "正在重新生成用戶端資源包…",
+  "options.extshape.rrp.regenServerData": "重新生成伺服器資料包",
+  "options.extshape.rrp.regenServerData.process": "正在重新生成伺服器資料包…",
+  "options.extshape.rrp.exportClientResources": "匯出用戶端資源包",
+  "options.extshape.rrp.exportClientResources.process": "正在匯出用戶端資源包…",
+  "options.extshape.rrp.exportServerData": "匯出伺服器資料包",
+  "options.extshape.rrp.exportServerData.process": "正在匯出伺服器資料包…",
+  "options.extshape.rrp.exportFilePath": "匯出檔路徑",
+  "options.extshape.rrp.textFieldHeader": "資源將匯出至以下路徑：",
+  "options.extshape.rrp.fullPath": "完整路徑如下：%s",
+  "options.extshape.rrp.invalidPath": "無效的路徑：%s"
 }
