把标签这东西弄乱了……

--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -73,10 +73,10 @@
   "block.extshape.prefix.weathered_copper": "Weathered Copper",
   "block.extshape.prefix.weathered_cut_copper": "Weathered Cut Copper",
 
-  "itemGroup.extshape.wooden_blocks": "Extended Block Shape: Wooden Blocks (sorted by base blocks, including vanilla blocks)",
-  "itemGroup.extshape.colorful_blocks": "Extended Block Shape: Colorful Blocks (sorted by base blocks, including vanilla blocks)",
-  "itemGroup.extshape.stone_blocks": "Extended Block Shape: Stone Blocks (sorted by base blocks, including vanilla blocks)",
-  "itemGroup.extshape.other_blocks": "Extended Block Shape: Other Blocks (sorted by base blocks, including vanilla blocks)",
+  "itemGroup.extshape.wooden_blocks": "\u00a78Extended Block Shape:\u00a7r Wooden Blocks",
+  "itemGroup.extshape.colorful_blocks": "\u00a78Extended Block Shape:\u00a7r Colorful Blocks",
+  "itemGroup.extshape.stone_blocks": "\u00a78Extended Block Shape:\u00a7r Stone Blocks",
+  "itemGroup.extshape.other_blocks": "\u00a78Extended Block Shape:\u00a7r Other Blocks",
 
   "modmenu.descriptionTranslation.extshape": "Added more shapes for many blocks, including shapes that does not exist in vanilla Minecraft, like vertical slabs. Most of the blocks are craftable like in vanilla. With this mod you can make more fascinating buildings!",
 
@@ -90,16 +90,21 @@
   "options.extshape.confirm.noGroups": "Your both '%s' and '%s' are set '%s', which means in Creative Mode you may not directly obtain items in this mod in your Creative inventory. Are you sure to continue?",
   "options.extshape.confirm.redo": "I reconsider",
   "options.extshape.registerBlockFamilies": "Register BlockFamilies",
+  "options.extshape.registerBlockFamilies.description": "Register the relations of the block to Minecraft's vanilla BlockFamilies. The BlockFamilies registry may be identified by some mods, but may cause potential problems when other mods use the BlockFamilies.",
 
   "options.extshape.rrp.title": "Runtime Resource Pack settings",
   "options.extshape.rrp.regenClientResources": "Regenerate client resources",
   "options.extshape.rrp.regenClientResources.process": "Regenerating client resources...",
+  "options.extshape.rrp.regenClientResources.description": "Regenerate the client resources of the runtime resource pack. This usually does not take effect, as the resources generated are always the same.",
   "options.extshape.rrp.regenServerData": "Regenerate server data",
   "options.extshape.rrp.regenServerData.process": "Regenerating server data...",
+  "options.extshape.rrp.regenServerData.description": "Regenerate the server data of the runtime resource pack. This usually does not take effect, as the resources generated are always the same.",
   "options.extshape.rrp.exportClientResources": "Export client resource pack",
   "options.extshape.rrp.exportClientResources.process": "Exporting client resource pack...",
+  "options.extshape.rrp.exportClientResources.description": "Export client resource of runtime resource pack in the specified path so that you can see its content, as if it is a regular resource pack.",
   "options.extshape.rrp.exportServerData": "Export server data",
   "options.extshape.rrp.exportServerData.process": "Exporting server data...",
+  "options.extshape.rrp.exportServerData.description": "Export server data of runtime resource pack in the specified path so that you can see its content, as if it is a regular data pack.",
   "options.extshape.rrp.exportFilePath": "Export file path",
   "options.extshape.rrp.textFieldHeader": "Resources will be exported at:",
   "options.extshape.rrp.fullPath": "Full path: %s",
