--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -30,7 +30,7 @@
   "block.extshape.prefix.diamond": "金剛石",
   "block.extshape.prefix.dripstone": "滴水巖",
   "block.extshape.prefix.emerald": "祖母綠",
-  "block.extshape.prefix.end_stone_brick": "終界巖",
+  "block.extshape.prefix.end_stone_brick": "終界巖磚",
   "block.extshape.prefix.exposed_copper": "渡濕銅",
   "block.extshape.prefix.exposed_cut_copper": "渡濕割銅",
   "block.extshape.prefix.gold": "金",
@@ -39,7 +39,7 @@
   "block.extshape.prefix.jungle": "叢莽",
   "block.extshape.prefix.lapis": "群青",
   "block.extshape.prefix.moss": "蘚",
-  "block.extshape.prefix.mossy_stone_brick": "苔䃮",
+  "block.extshape.prefix.mossy_stone_brick": "苔磚",
   "block.extshape.prefix.nether_brick": "焱界磚",
   "block.extshape.prefix.nether_wart": "焱界疣",
   "block.extshape.prefix.netherite": "玄鈺",
@@ -47,13 +47,13 @@
   "block.extshape.prefix.oxidized_copper": "風蝕銅",
   "block.extshape.prefix.oxidized_cut_copper": "風蝕割銅",
   "block.extshape.prefix.polished_blackstone_brick": "鎣墨石磚",
-  "block.extshape.prefix.prismarine_brick": "海磷",
+  "block.extshape.prefix.prismarine_brick": "海磷磚",
   "block.extshape.prefix.purpur": "紫珀",
   "block.extshape.prefix.quartz": "石英",
   "block.extshape.prefix.quartz_brick": "石英磚",
-  "block.extshape.prefix.raw_copper": "未鍊之銅",
-  "block.extshape.prefix.raw_gold": "生金",
-  "block.extshape.prefix.raw_iron": "生鐵",
+  "block.extshape.prefix.raw_copper": "銅石",
+  "block.extshape.prefix.raw_gold": "金石",
+  "block.extshape.prefix.raw_iron": "鐵石",
   "block.extshape.prefix.red_nether_brick": "焱界紅磚",
   "block.extshape.prefix.smooth_quartz": "潤石英",
   "block.extshape.prefix.snow": "雪",
@@ -73,10 +73,40 @@
   "block.extshape.prefix.weathered_copper": "鏽刻銅",
   "block.extshape.prefix.weathered_cut_copper": "鏽刻割銅",
 
-  "itemGroup.extshape.wooden_blocks": "塊形之擴：木（序以原，含藝赍之塊）",
-  "itemGroup.extshape.colorful_blocks": "塊形之擴：彩（序以原，含藝赍之塊）",
-  "itemGroup.extshape.stone_blocks": "塊形之擴：石（序以原，含藝赍之塊）",
-  "itemGroup.extshape.other_blocks": "塊形之擴：餘（序以原，含藝赍之塊）",
+  "itemGroup.extshape.wooden_blocks": "\u00a78塊形之擴：\u00a7r木",
+  "itemGroup.extshape.colorful_blocks": "\u00a78塊形之擴：\u00a7r彩",
+  "itemGroup.extshape.stone_blocks": "\u00a78塊形之擴：\u00a7r石",
+  "itemGroup.extshape.other_blocks": "\u00a78塊形之擴：\u00a7r餘",
 
-  "modmenu.descriptionTranslation.extshape": "增益形于塊，含形之藝赍未含者，如立版。咸可以類藝赍之製。作精良建築也。"
+  "modmenu.descriptionTranslation.extshape": "增益形于塊，含形之藝赍未含者，如立版。咸可以類藝赍之製。作精良建築也。",
+
+  "options.extshape.title": "塊形之擴改囊配製",
+  "options.extshape.addToVanillaGroups": "咸入本設",
+  "options.extshape.addToVanillaGroups.tooltip": "塊由是改囊增益者，咸入礦藝之本設之組也。如例，階版咸入組「%s」，檻扉咸入組「%s」，鈕及踏板如「%s」組。物入以序同其定者，因序無則。然若已載「合理排序」改囊，可啟是項。",
+  "options.extshape.showSpecificGroups": "顯專物組",
+  "options.extshape.showSpecificGroups.tooltip": "增益專組以列塊之擁異形者，其括礦藝之本設。是塊也，序以基，塊同基者並序也。",
+  "options.extshape.default": "預設：%s",
+  "options.extshape.confirm": "確？",
+  "options.extshape.confirm.noGroups": "君「%s」並「%s」咸為「%s」，是形也，如為創法，無從取物自是囊者于創之囊。確行此乎？",
+  "options.extshape.confirm.redo": "吾欲三思",
+  "options.extshape.registerBlockFamilies": "入簿BlockFamilies",
+  "options.extshape.registerBlockFamilies.description": "塊之增益於是改也，咸入簿礦藝之BlockFamilies也。他或用也，然若亦用BlockFamilies或現衝突。",
+
+  "options.extshape.rrp.title": "運行時資囊設置",
+  "options.extshape.rrp.regenClientResources": "複生客端資囊",
+  "options.extshape.rrp.regenClientResources.process": "正在複生客端資囊…",
+  "options.extshape.rrp.regenClientResources.description": "複生運行時資囊之客端資囊。效鮮生，以其資複生者無異同。",
+  "options.extshape.rrp.regenServerData": "複生伺服器錄囊",
+  "options.extshape.rrp.regenServerData.process": "正在複生伺服器錄囊…",
+  "options.extshape.rrp.regenServerData.description": "複生運行時資囊之伺服器錄囊。效鮮生，以其錄複生者無異同。",
+  "options.extshape.rrp.exportClientResources": "出錄客端資囊",
+  "options.extshape.rrp.exportClientResources.process": "正匯客端資囊…",
+  "options.extshape.rrp.exportClientResources.description": "錄運行時資囊之客端之資至指定路徑，以類常規資囊顯其內容。",
+  "options.extshape.rrp.exportServerData": "出錄伺服器錄囊",
+  "options.extshape.rrp.exportServerData.process": "正匯伺服器錄囊…",
+  "options.extshape.rrp.exportServerData.description": "錄運行時資囊之伺服器之錄至指定路徑，以類常規錄囊顯其內容。",
+  "options.extshape.rrp.exportFilePath": "出錄檔路徑",
+  "options.extshape.rrp.textFieldHeader": "錄資于是路：",
+  "options.extshape.rrp.fullPath": "完整路徑：%s",
+  "options.extshape.rrp.invalidPath": "是路無效：%s"
 }
