--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -73,10 +73,10 @@
   "block.extshape.prefix.weathered_copper": "锈蚀的铜",
   "block.extshape.prefix.weathered_cut_copper": "锈蚀的切制铜",
 
-  "itemGroup.extshape.colorful_blocks": "扩展方块形状：彩色方块（按基础方块排序，含原版方块）",
-  "itemGroup.extshape.other_blocks": "扩展方块形状：其他（按基础方块排序，含原版方块）",
-  "itemGroup.extshape.stone_blocks": "扩展方块形状：石质方块（按基础方块排序，含原版方块）",
-  "itemGroup.extshape.wooden_blocks": "扩展方块形状：木制方块（按基础方块排序，含原版方块）",
+  "itemGroup.extshape.colorful_blocks": "\u00a78扩展方块形状：\u00a7r彩色方块",
+  "itemGroup.extshape.other_blocks": "\u00a78扩展方块形状：\u00a7r其他",
+  "itemGroup.extshape.stone_blocks": "\u00a78扩展方块形状：\u00a7r石质方块",
+  "itemGroup.extshape.wooden_blocks": "\u00a78扩展方块形状：\u00a7r木制方块",
 
   "modmenu.descriptionTranslation.extshape": "本模组为许多方块添加了更多形状，包括原版不存在的形状，如垂直台阶。大多数方块都像原版一样可以合成。借助此模组，你可以制作出更加精美的建筑。",
 
@@ -90,16 +90,21 @@
   "options.extshape.confirm.noGroups": "您的“%s”和“%s”都设置为“%s”，这意味着您在创造模式下，无法从创造模式物品栏中获取模组中的物品。确定要继续吗？",
   "options.extshape.confirm.redo": "我再考虑下",
   "options.extshape.registerBlockFamilies": "注册BlockFamilies",
+  "options.extshape.registerBlockFamilies.description": "将本模组内的方块关系注册到Minecraft原版的BlockFamilies中。BlockFamilies可能会被其他模组识别，但是如果其他模组也使用这些BlockFamilies则有可能出现一些问题。",
 
   "options.extshape.rrp.title": "运行时资源包设置",
   "options.extshape.rrp.regenClientResources": "重新生成客户端资源包",
   "options.extshape.rrp.regenClientResources.process": "正在重新生成客户端资源包…",
+  "options.extshape.rrp.regenClientResources.description": "重新生成运行时资源包的客户端资源包。通常不起效果，因为生成的资源往往是相同的。",
   "options.extshape.rrp.regenServerData": "重新生成服务器数据包",
   "options.extshape.rrp.regenServerData.process": "正在重新生成服务器数据包…",
+  "options.extshape.rrp.regenServerData.description": "重新生成运行时资源包的服务器数据包。通常不起效果，因为生成的资源往往是相同的。",
   "options.extshape.rrp.exportClientResources": "导出客户端资源包",
   "options.extshape.rrp.exportClientResources.process": "正在导出客户端资源包…",
+  "options.extshape.rrp.exportClientResources.description": "将运行时资源包的客户端资源导出到指定的路径中，以便于像普通的资源包一样查看其内容。",
   "options.extshape.rrp.exportServerData": "导出服务器数据包",
   "options.extshape.rrp.exportServerData.process": "正在导出服务器数据包…",
+  "options.extshape.rrp.exportServerData.description": "将运行时资源包的服务器数据导出到指定的路径中，以便于像普通的数据包一样查看其内容。",
   "options.extshape.rrp.exportFilePath": "导出文件路径",
   "options.extshape.rrp.textFieldHeader": "资源将导出至以下路径：",
   "options.extshape.rrp.fullPath": "完整路径如下：%s",
