--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -39,18 +39,18 @@
   "block.extshape.prefix.jungle": "叢林木",
   "block.extshape.prefix.lapis": "青金石",
   "block.extshape.prefix.moss": "青苔",
-  "block.extshape.prefix.mossy_stone_brick": "青苔石",
+  "block.extshape.prefix.mossy_stone_brick": "青苔石磚",
   "block.extshape.prefix.nether_brick": "地獄磚",
   "block.extshape.prefix.nether_wart": "地獄孢子",
-  "block.extshape.prefix.netherite": "地獄合金磚",
+  "block.extshape.prefix.netherite": "地獄合金",
   "block.extshape.prefix.oak": "橡木",
   "block.extshape.prefix.oxidized_copper": "氧化嘅銅",
   "block.extshape.prefix.oxidized_cut_copper": "氧化嘅切製銅",
   "block.extshape.prefix.polished_blackstone_brick": "拋光黑石磚",
   "block.extshape.prefix.prismarine_brick": "海磷石磚",
   "block.extshape.prefix.purpur": "紫珀",
-  "block.extshape.prefix.quartz": "石英磚",
-  "block.extshape.prefix.quartz_brick": "磚紋石英磚",
+  "block.extshape.prefix.quartz": "石英",
+  "block.extshape.prefix.quartz_brick": "磚紋石英",
   "block.extshape.prefix.raw_copper": "粗銅",
   "block.extshape.prefix.raw_gold": "粗金",
   "block.extshape.prefix.raw_iron": "粗鐵",
@@ -73,33 +73,38 @@
   "block.extshape.prefix.weathered_copper": "生鏽嘅銅",
   "block.extshape.prefix.weathered_cut_copper": "生鏽嘅切製銅",
 
-  "itemGroup.extshape.wooden_blocks": "擴展方塊形狀：木製方塊（按基礎方塊排序，含原版方塊）",
-  "itemGroup.extshape.colorful_blocks": "擴展方塊形狀：彩色方塊（按基礎方塊排序，含原版方塊）",
-  "itemGroup.extshape.stone_blocks": "擴展方塊形狀：石質方塊（按基礎方塊排序，含原版方塊）",
-  "itemGroup.extshape.other_blocks": "擴展方塊形狀：其他（按基礎方塊排序，含原版方塊）",
+  "itemGroup.extshape.wooden_blocks": "\u00a78擴展方塊形狀：\u00a7r木製方塊",
+  "itemGroup.extshape.colorful_blocks": "\u00a78擴展方塊形狀：\u00a7r彩色方塊",
+  "itemGroup.extshape.stone_blocks": "\u00a78擴展方塊形狀：\u00a7r石質方塊",
+  "itemGroup.extshape.other_blocks": "\u00a78擴展方塊形狀：\u00a7r其他",
 
   "modmenu.descriptionTranslation.extshape": "本模組為好多方塊添加咗多啲形狀，包括原版唔存在嘅形狀，如縱半磚。大多數方塊都好似原版一样可以合成。藉助此模組，你可以製作出更加精美嘅建築。",
 
   "options.extshape.title": "擴展方塊形狀模組配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品組",
-  "options.extshape.addToVanillaGroups.tooltip": "將本模組添加嘅方塊添加至Minecraft嘅原版創造模式物品組中。例如，所有階梯和半磚都加入“%s”物品組，欄杆和牆加入“%s”物品組，按鈕和壓力板則加入“%s”物品組。物品係以定義時順序加入，所以可能會有啲混亂，但是如果你安裝合理排序模組，則推薦開啟此項。",
+  "options.extshape.addToVanillaGroups.tooltip": "將本模組添加嘅方塊添加至 Minecraft 嘅原版創造模式物品組中。例如，所有階梯和半磚都加入「%s」物品組，欄杆和牆加入「%s」物品組，按鈕和壓力板則加入「%s」物品組。物品係以定義時順序加入，所以可能會有啲混亂，但是如果你安裝合理排序模組，則推薦開啟此項。",
   "options.extshape.showSpecificGroups": "顯示專門物品組",
   "options.extshape.showSpecificGroups.tooltip": "添加啲專用物品組以顯示所有擁有不同形狀嘅方塊（含原版和模組中），依啲方塊按照其基礎方塊的順序排列，基礎方塊相同嘅方塊顯示在一起。",
   "options.extshape.default": "默認：%s",
   "options.extshape.confirm": "確定？",
-  "options.extshape.confirm.noGroups": "你嘅“%s”和“%s”都設置為“%s”，這意味著你玩創造模式時，無法從創造模式物品欄中獲取模組中嘅物品。你真係要繼續？",
+  "options.extshape.confirm.noGroups": "你嘅「%s」和「%s」都設置為「%s」，這意味著你玩創造模式時，無法從創造模式物品欄中獲取模組中嘅物品。你真係要繼續？",
   "options.extshape.confirm.redo": "我再考慮一下",
-  "options.extshape.registerBlockFamilies": "註冊BlockFamilies",
+  "options.extshape.registerBlockFamilies": "註冊 BlockFamilies",
+  "options.extshape.registerBlockFamilies.description": "將本模組內的方塊關係註冊到 Minecraft 原版的 BlockFamilies 中。BlockFamilies 可能會被其他模組識別，但是如果其他模組也使用這些 BlockFamilies 則有可能出現一些問題。",
 
   "options.extshape.rrp.title": "運行時資源包設置",
   "options.extshape.rrp.regenClientResources": "重新生成用戶端資源包",
   "options.extshape.rrp.regenClientResources.process": "正在重新生成用戶端資源包…",
+  "options.extshape.rrp.regenClientResources.description": "重新生成運行時資源包嘅用戶端資源包。通常唔產生效果，因為生成嘅資源往往一樣。",
   "options.extshape.rrp.regenServerData": "重新生成伺服器數據包",
   "options.extshape.rrp.regenServerData.process": "正在重新生成伺服器數據包…",
+  "options.extshape.rrp.regenServerData.description": "重新生成運行時資源包開伺服器數據包。通常唔產生效果，因為生成嘅數據往往一樣。",
   "options.extshape.rrp.exportClientResources": "匯出用戶端資源包",
   "options.extshape.rrp.exportClientResources.process": "正在匯出用戶端資源包…",
+  "options.extshape.rrp.exportClientResources.description": "將運行時資源包嘅用戶端資源匯出到指定路徑中，以便於像通常嘅資源包一樣查看其內容。",
   "options.extshape.rrp.exportServerData": "匯出伺服器數據包",
   "options.extshape.rrp.exportServerData.process": "正在匯出伺服器數據包…",
+  "options.extshape.rrp.exportServerData.description": "將運行時資源包嘅伺服器數據匯出到指定路徑中，以便於像通常嘅數據包一樣查看其內容。",
   "options.extshape.rrp.exportFilePath": "匯出檔路徑",
   "options.extshape.rrp.textFieldHeader": "資源將匯出至以下路徑：",
   "options.extshape.rrp.fullPath": "完整路徑如下：%s",
