--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -90,7 +90,7 @@
   "options.extshape.confirm.noGroups": "君「%s」並「%s」咸為「%s」，是形也，如為創法，無從取物自是囊者于創之囊。確行此乎？",
   "options.extshape.confirm.redo": "吾欲三思",
   "options.extshape.registerBlockFamilies": "入簿BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "塊之增益於是改也，咸入簿礦藝之BlockFamilies也。他或用也，然若亦用BlockFamilies或現衝突。",
+  "options.extshape.registerBlockFamilies.description": "塊之增益於是改也，咸入簿礦藝之BlockFamilies也。他或用也，然若亦用BlockFamilies或現衝突。\n複啟以效見",
 
   "options.extshape.rrp.title": "運行時資囊設置",
   "options.extshape.rrp.regenClientResources": "複生客端資囊",
@@ -100,10 +100,10 @@
   "options.extshape.rrp.regenServerData.process": "正在複生伺服器錄囊…",
   "options.extshape.rrp.regenServerData.description": "複生運行時資囊之伺服器錄囊。效鮮生，以其錄複生者無異同。",
   "options.extshape.rrp.exportClientResources": "出錄客端資囊",
-  "options.extshape.rrp.exportClientResources.process": "正匯客端資囊…",
+  "options.extshape.rrp.exportClientResources.process": "正錄客端資囊…",
   "options.extshape.rrp.exportClientResources.description": "錄運行時資囊之客端之資至指定路徑，以類常規資囊顯其內容。",
   "options.extshape.rrp.exportServerData": "出錄伺服器錄囊",
-  "options.extshape.rrp.exportServerData.process": "正匯伺服器錄囊…",
+  "options.extshape.rrp.exportServerData.process": "正錄伺服器錄囊…",
   "options.extshape.rrp.exportServerData.description": "錄運行時資囊之伺服器之錄至指定路徑，以類常規錄囊顯其內容。",
   "options.extshape.rrp.exportFilePath": "出錄檔路徑",
   "options.extshape.rrp.textFieldHeader": "錄資于是路：",
