--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -78,7 +78,8 @@
   "itemGroup.extshape.stone_blocks": "\u00a78塊形之擴：\u00a7r石",
   "itemGroup.extshape.other_blocks": "\u00a78塊形之擴：\u00a7r餘",
 
-  "modmenu.descriptionTranslation.extshape": "增益形于塊，含形之藝赍未含者，如立版。咸可以類藝赍之製。作精良建築也。",
+  "modmenu.descriptionTranslation.extshape": "增益眾形於原塊，含形之藝赍未含者，如立版、立階、條。數塊咸大類本原礦藝之形，類其基礎。如例之，基石階版抵炸藥之攻、凋靈之擊。羊毛之檻扉，或灼或鉸。君因於創法製絕細之築，亦增生法之樂也。",
+  "modmenu.summaryTranslation.extshape": "增益眾形於原塊，亦類其之行。",
 
   "options.extshape.title": "塊形之擴改囊配製",
   "options.extshape.addToVanillaGroups": "咸入本設",
@@ -93,12 +94,12 @@
   "options.extshape.registerBlockFamilies.description": "塊之增益於是改也，咸入簿礦藝之BlockFamilies也。他或用也，然若亦用BlockFamilies或現衝突。\n複啟以效見",
 
   "options.extshape.rrp.title": "運行時資囊設置",
-  "options.extshape.rrp.regenClientResources": "複生客端資囊",
-  "options.extshape.rrp.regenClientResources.process": "正在複生客端資囊…",
-  "options.extshape.rrp.regenClientResources.description": "複生運行時資囊之客端資囊。效鮮生，以其資複生者無異同。",
-  "options.extshape.rrp.regenServerData": "複生伺服器錄囊",
-  "options.extshape.rrp.regenServerData.process": "正在複生伺服器錄囊…",
-  "options.extshape.rrp.regenServerData.description": "複生運行時資囊之伺服器錄囊。效鮮生，以其錄複生者無異同。",
+  "options.extshape.rrp.regenClientResources": "復生客端資囊",
+  "options.extshape.rrp.regenClientResources.process": "正在復生客端資囊…",
+  "options.extshape.rrp.regenClientResources.description": "復生改囊之運行時資囊之客端資囊，無作於原生與他囊。用以開發，效常不見。復生之囊，應于F3+T。",
+  "options.extshape.rrp.regenServerData": "復生伺服器錄囊",
+  "options.extshape.rrp.regenServerData.process": "正在復生伺服器錄囊…",
+  "options.extshape.rrp.regenServerData.description": "復生改囊之運行時資囊之伺服器錄囊，無作於原生與他囊。用以開發，效常不見。復生之囊，應于/data命令畢時",
   "options.extshape.rrp.exportClientResources": "出錄客端資囊",
   "options.extshape.rrp.exportClientResources.process": "正錄客端資囊…",
   "options.extshape.rrp.exportClientResources.description": "錄運行時資囊之客端之資至指定路徑，以類常規資囊顯其內容。",
