--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -78,7 +78,8 @@
   "itemGroup.extshape.stone_blocks": "\u00a78擴展方塊形狀：\u00a7r石質方塊",
   "itemGroup.extshape.other_blocks": "\u00a78擴展方塊形狀：\u00a7r其他",
 
-  "modmenu.descriptionTranslation.extshape": "本模組為許多方塊添加了更多形狀，包括原版不存在的形狀，如縱半磚。大多數方塊都像原版一樣可以合成。藉助此模組，你可以製作出更加精美的建築。",
+  "modmenu.descriptionTranslation.extshape": "本模組為許多原版方塊添加了更多形狀，包括原版不存在的形狀，如縱半磚、縱樓梯和橫條。大多數方塊都具有類似於原版的行為，就像其基礎方塊一樣。例如，基岩階梯和基岩半磚像基岩本身一樣可以防爆防凋零怪，羊毛柵欄和羊毛柵欄門可燃且可以被剪刀剪。藉助此模組，你可以製作出更加精美的建築，玩生存也會更加有趣。",
+  "modmenu.summaryTranslation.extshape": "為許多原版方塊添加了更多形狀，且具有類似原版的行為。",
 
   "options.extshape.title": "擴展方塊形狀模組配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品組",
@@ -95,10 +96,10 @@
   "options.extshape.rrp.title": "運行時資源包設置",
   "options.extshape.rrp.regenClientResources": "重新生成用戶端資源包",
   "options.extshape.rrp.regenClientResources.process": "正在重新生成用戶端資源包…",
-  "options.extshape.rrp.regenClientResources.description": "重新生成運行時資源包的用戶端資源包。通常不起效果，因為生成的資源往往是相同的。",
+  "options.extshape.rrp.regenClientResources.description": "重新生成本模組的運行時資源包的用戶端資源包，不影響原版和其他模組。主要用於開發，一般不起效果。重新生成的資源需按 F3+T 才會被應用。",
   "options.extshape.rrp.regenServerData": "重新生成伺服器資料包",
   "options.extshape.rrp.regenServerData.process": "正在重新生成伺服器資料包…",
-  "options.extshape.rrp.regenServerData.description": "重新生成運行時資源包的伺服器資料包。通常不起效果，因為生成的資料往往是相同的。",
+  "options.extshape.rrp.regenServerData.description": "重新生成本模組的運行時資源包的伺服器資料包，不影響原版和其他模組。主要用於開發，一般不起作用。重新生成的資源需使用 /data 指令才會被應用。",
   "options.extshape.rrp.exportClientResources": "匯出用戶端資源包",
   "options.extshape.rrp.exportClientResources.process": "正在匯出用戶端資源包…",
   "options.extshape.rrp.exportClientResources.description": "將運行時資源包的用戶端資源匯出到指定的路徑中，以便於像普通的資源包一樣查看其內容。",
