--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -38,8 +38,10 @@
   "block.extshape.prefix.iron": "Iron",
   "block.extshape.prefix.jungle": "Jungle",
   "block.extshape.prefix.lapis": "Lapis",
+  "block.extshape.prefix.mangrove": "Mangrove",
   "block.extshape.prefix.moss": "Moss",
   "block.extshape.prefix.mossy_stone_brick": "Mossy Stone Brick",
+  "block.extshape.prefix.mud_brick": "Mud Brick",
   "block.extshape.prefix.nether_brick": "Nether Brick",
   "block.extshape.prefix.nether_wart": "Nether Wart",
   "block.extshape.prefix.netherite": "Netherite",
