--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -38,8 +38,10 @@
   "block.extshape.prefix.iron": "鐵",
   "block.extshape.prefix.jungle": "叢莽",
   "block.extshape.prefix.lapis": "群青",
+  "block.extshape.prefix.mangrove": "沒潮木",
   "block.extshape.prefix.moss": "蘚",
   "block.extshape.prefix.mossy_stone_brick": "苔磚",
+  "block.extshape.prefix.mud_brick": "泥磚",
   "block.extshape.prefix.nether_brick": "焱界磚",
   "block.extshape.prefix.nether_wart": "焱界疣",
   "block.extshape.prefix.netherite": "玄鈺",
