--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -17,7 +17,7 @@
   "block.extshape.prefix.acacia": "金合欢木",
   "block.extshape.prefix.amethyst": "紫水晶",
   "block.extshape.prefix.birch": "白桦木",
-  "block.extshape.prefix.brick": "砖",
+  "block.extshape.prefix.brick": "红砖",
   "block.extshape.prefix.chiseled_nether_brick": "錾制下界砖",
   "block.extshape.prefix.chiseled_quartz": "錾制石英",
   "block.extshape.prefix.chiseled_stone_brick": "錾制石砖",
@@ -38,8 +38,10 @@
   "block.extshape.prefix.iron": "铁",
   "block.extshape.prefix.jungle": "丛林木",
   "block.extshape.prefix.lapis": "青金石",
+  "block.extshape.prefix.mangrove": "红树木",
   "block.extshape.prefix.moss": "苔藓",
   "block.extshape.prefix.mossy_stone_brick": "苔石砖",
+  "block.extshape.prefix.mud_brick": "泥砖",
   "block.extshape.prefix.nether_brick": "下界砖",
   "block.extshape.prefix.nether_wart": "下界疣",
   "block.extshape.prefix.netherite": "下界合金",
