--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -38,8 +38,10 @@
   "block.extshape.prefix.iron": "鐵",
   "block.extshape.prefix.jungle": "叢林木",
   "block.extshape.prefix.lapis": "青金石",
+  "block.extshape.prefix.mangrove": "紅樹木",
   "block.extshape.prefix.moss": "青苔",
   "block.extshape.prefix.mossy_stone_brick": "青苔石磚",
+  "block.extshape.prefix.mud_brick": "泥磚",
   "block.extshape.prefix.nether_brick": "地獄磚",
   "block.extshape.prefix.nether_wart": "地獄孢子",
   "block.extshape.prefix.netherite": "地獄合金",
