--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -96,6 +96,7 @@
   "options.extshape.registerBlockFamilies.description": "將本模組內的方塊關係註冊到 Minecraft 原版的 BlockFamilies 中。BlockFamilies 可能會被其他模組識別，但是如果其他模組也使用這些 BlockFamilies 則有可能出現一些問題。\n重啟遊戲後生效。",
 
   "options.extshape.rrp.title": "運行時資源包設置",
+  "options.extshape.rrp.description": "管理擴展方塊形狀模組的運行時資源包。",
   "options.extshape.rrp.regenClientResources": "重新生成用戶端資源包",
   "options.extshape.rrp.regenClientResources.process": "正在重新生成用戶端資源包…",
   "options.extshape.rrp.regenClientResources.description": "重新生成本模組的運行時資源包的用戶端資源包，不影響原版和其他模組。主要用於開發，一般不起效果。重新生成的資源需按 F3+T 才會被應用。",
@@ -111,5 +112,12 @@
   "options.extshape.rrp.exportFilePath": "匯出檔路徑",
   "options.extshape.rrp.textFieldHeader": "資源將匯出至以下路徑：",
   "options.extshape.rrp.fullPath": "完整路徑如下：%s",
-  "options.extshape.rrp.invalidPath": "無效的路徑：%s"
+  "options.extshape.rrp.invalidPath": "無效的路徑：%s",
+
+  "message.extshape.recipe_conflict.detected": "檢測到合成表存在撞車：%s",
+  "message.extshape.recipe_conflict.unknown": "檢測到合成表存在未知情況：%s",
+  "message.extshape.recipe_conflict.exception": "檢測合成表撞車時出現未知錯誤",
+  "message.extshape.recipe_conflict.finish.none": "檢測完成，未檢測到合成表撞車",
+  "message.extshape.recipe_conflict.finish.single": "檢測完成，共檢測到%s個合成表撞車",
+  "message.extshape.recipe_conflict.finish.plural": "檢測完成，共檢測到%s個合成表撞車"
 }
