--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -86,12 +86,19 @@
   "options.extshape.addToVanillaGroups.tooltip": "将本模组添加的方块添加至Minecraft的原版创造模式物品组中。例如，所有的楼梯和台阶都加入“%s”物品组，栅栏和墙加入“%s”物品组，按钮和压力板则加入“%s”物品组。物品是按照被定义时的顺序加入的，所以可能会有点乱，但是如果您安装了合理排序模组，则推荐开启此项。",
   "options.extshape.showSpecificGroups": "显示专门物品组",
   "options.extshape.showSpecificGroups.tooltip": "添加一些专门的物品组以显示所有拥有不同形状的方块（含原版和模组中的），这些方块按照其基础方块的顺序排列，基础方块相同的方块显示在一起。",
+  "options.extshape.preventWoodenWallRecipes": "避免木墙合成配方",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木墙的合成配方，以解决与木质活板门的配方撞车问题。若开启，您将无法合成木墙。如果您安装了可以修复合成表撞车的模组，可以将本选项关闭。",
+  "options.extshape.avoidSomeButtonRecipes": "避免部分按钮配方",
+  "options.extshape.avoidSomeButtonRecipes.tooltip": "避免部分按钮的合成配方，以修复与其他物品配方撞车的问题。例如，由一个钻石块合成钻石按钮的配方与将钻石块分解为9个钻石物品的配方是撞车的。若开启，您将无法合成这些按钮，以确保其他物品能正常合成。如果您安装了可以修复合成表撞车的模组，可以将本选项关闭。",
+  "options.extshape.specialSnowSlabCrafting": "特殊的雪台阶配方",
+  "options.extshape.specialSnowSlabCrafting.tooltip": "若开启，雪台阶则由一个雪合成，而不是由3个雪块。这是为了避免与雪的合成配方的撞车。如果你安装了可以修复合成表撞车的模组，可以将本选项关闭。",
+
   "options.extshape.default": "默认：%s",
   "options.extshape.confirm": "确定？",
   "options.extshape.confirm.noGroups": "您的“%s”和“%s”都设置为“%s”，这意味着您在创造模式下，无法从创造模式物品栏中获取模组中的物品。确定要继续吗？",
   "options.extshape.confirm.redo": "我再考虑下",
   "options.extshape.registerBlockFamilies": "注册BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "将本模组内的方块关系注册到Minecraft原版的BlockFamilies中。BlockFamilies可能会被其他模组识别，但是如果其他模组也使用这些BlockFamilies则有可能出现一些问题。\n重启游戏后生效。",
+  "options.extshape.registerBlockFamilies.description": "将本模组内的方块关系注册到Minecraft原版的BlockFamilies中。BlockFamilies可能会被其他模组识别，但是如果其他模组也使用这些BlockFamilies则有可能出现一些问题。一般不需要开启。\n重启游戏后生效。",
 
   "options.extshape.rrp.title": "运行时资源包设置",
   "options.extshape.rrp.description": "管理扩展方块形状模组的运行时资源包。",
@@ -112,6 +119,13 @@
   "options.extshape.rrp.fullPath": "完整路径如下：%s",
   "options.extshape.rrp.invalidPath": "无效的路径：%s",
 
+  "options.extshape.reasonable-sorting": "合理排序模组配置",
+  "options.extshape.reasonable-sorting.description": "如果您安装了“合理排序”模组，你可以定义方块物品根据其形状如何排序，这些形状包括本模组提供的方块形状。其他模组提供的方块并不会受到影响。\n\n你也可以在模组菜单中选择“Reasonable Sorting”以进入其模组配置界面。\n\n如果此按钮点击无响应，可能是“合理排序”模组未安装或版本过低。",
+  "options.extshape.dataChanged": "服务器数据已改变，是否重新生成服务器数据？",
+  "options.extshape.dataChanged.details": "本模组使用的运行时资源包在Minecraft初始化时就会生成。您刚修改了与数据生成有关的选项，这需要在重新生成服务器数据后才能生效。此外，如果当前服务器（包括单人游戏的内置服务器）正在运行，你还需要输入\u00a77/reload\u00a7r命令。",
+  "options.dataChanged.finish": "已重新生成运行时资源包的服务器数据。如果您是在单人游戏，或者是服主，请执行%s以加载合成表的更改。注意：多人游戏下只有服务器主机的设置才是有效的。",
+
+  "message.extshape.recipe_conflict.start": "开始检测合成表撞车，可能需要一段时间",
   "message.extshape.recipe_conflict.detected": "检测到合成表存在撞车：%s",
   "message.extshape.recipe_conflict.unknown": "检测到合成表存在未知情况：%s",
   "message.extshape.recipe_conflict.exception": "检测合成表撞车时出现未知错误",
