--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -78,7 +78,7 @@
   "itemGroup.extshape.stone_blocks": "\u00a79Extended Block Shape:\u00a7r Stone Blocks",
   "itemGroup.extshape.other_blocks": "\u00a79Extended Block Shape:\u00a7r Other Blocks",
 
-  "modmenu.descriptionTranslation.extshape": "This mod adds more shapes for many vanilla blocks, including shapes that does not exist in vanilla Minecraft, like vertical slabs, vertical stairs or quarter pieces. Most of the blocks have vanilla behaviours, like what their base block behaves. For example, bedrock stairs and slabs are explosion-immune and wither-immune like bedrock, and wool fences and fence gates are flammable and can be shared.\nWith this mod you can make more fascinating buildings, and your survival can be also more interesting.",
+  "modmenu.descriptionTranslation.extshape": "This mod adds more shapes for many vanilla blocks, including shapes that do not exist in vanilla Minecraft, like vertical slabs, vertical stairs or quarter pieces. Most of the blocks have vanilla behaviours, like what their base block behaves. For example, bedrock stairs and slabs are explosion-immune and wither-immune like bedrock, and wool fences and fence gates are flammable and can be shared.\nWith this mod you can make more fascinating buildings, and your survival can be also more interesting.",
   "modmenu.summaryTranslation.extshape": "More shapes for many vanilla blocks, which behave like in vanilla.",
 
   "options.extshape.title": "Configuration of Extended Block Shapes Mod",
